--- a/时间序列的奇异谱分析.md
+++ b/时间序列的奇异谱分析.md
@@ -7,6 +7,8 @@
 >>>>[2.1.1.2 第二阶段：重构](#index2.1.1.2)
 >>>
 >>>[2.1.2 对SSA基础算法中四个步骤的分析](#index2.1.2)
+>>>>[2.1.2.1 嵌入](#index2.1.2.1)
+>>>>[2.1.2.2 SVD分解](#index2.1.2.2)
 
 
 
@@ -35,27 +37,21 @@ x_{3} & x_{4} & x_{5} & \ldots x_{K+2} \\
 x_{L} & x_{L+1} & x_{L+2} & \ldots x_{N}
 \end{array}\right)  \tag{2.1} 
 $$
-滞后向量$X_{i}$是**轨迹矩阵**$\mathbf{X}$的列。$\mathbf{X}$的行和列都是原序列的子序列。$\mathbf{X}$中的位于$(i,j)$的元素$x_{ij}=x_{i+j-1}$，因此$\mathbf{X}$中反对角线的元素相等。（因此轨迹矩阵也被称称作**汉克尔矩阵**）
-公式[(2.1)](#eq2.1)定义了一个从时间序列到轨迹矩阵的一对一的映射。
+滞后向量$X_{i}$是**轨迹矩阵**$\mathbf{X}$的列。$\mathbf{X}$的行和列都是原序列的子序列。$\mathbf{X}$中的位于$(i,j)$的元素$x_{ij}=x_{i+j-1}$，因此$\mathbf{X}$中反对角线的元素相等。（因此轨迹矩阵也被称称作**汉克尔矩阵**）公式[(2.1)](#eq2.1)定义了一个从时间序列到轨迹矩阵的一对一的映射。
 
 
 **第二步：奇异值分解**
-在这一步，我们对$\mathbf{X}$进行SVD分解。令$\mathbf{S}=\mathbf{X}\mathbf{X}^{T}$并且用$\lambda_{1}, \ldots, \lambda_{L}$表示$\mathbf{S}$的特征值，其中这些特征值按照从大到小的顺序排列。用$U_{1}, \ldots, U_{L}$表示对应的特征向量。
-用$d$表示矩阵$\mathbf{X}$的秩，一般情况下，如果时间序列是真实世界中获取到的，$d=L^*=min{L,K}$。记$V_{i}=\mathbf{X}^{\mathrm{T}} U_{i} / \sqrt{\lambda_{i}}(i=1, \ldots, d)$。轨迹矩阵$\mathbf{X}$可以被分解为：
+在这一步，我们对$\mathbf{X}$进行SVD分解。令$\mathbf{S}=\mathbf{X}\mathbf{X}^{T}$并且用$\lambda_{1}, \ldots, \lambda_{L}$表示$\mathbf{S}$的特征值，其中这些特征值按照从大到小的顺序排列。用$U_{1}, \ldots, U_{L}$表示对应的特征向量。用$d$表示矩阵$\mathbf{X}$的秩，一般情况下，如果时间序列是真实世界中获取到的，$d=L^*=min{L,K}$。记$V_{i}=\mathbf{X}^{\mathrm{T}} U_{i} / \sqrt{\lambda_{i}}(i=1, \ldots, d)$。轨迹矩阵$\mathbf{X}$可以被分解为：
 <span id="eq2.2"></span>
 $$
 \mathbf{X}=\mathbf{X}_{1}+\ldots+\mathbf{X}_{d}  \tag{2.2}
 $$
-其中$\mathbf{X}_{i}=\sqrt{\lambda_{i}} U_{i} V_{i}^{\mathrm{T}}$。
-矩阵$\mathbf{X}_{i}$的秩为1，这样的矩阵被称作初等矩阵（elementary matrices），
-集合$\left(\sqrt{\lambda_{i}}, U_{i}, V_{i}\right)$被称作三特征（eigentriple）简记作ET。
+其中$\mathbf{X}_{i}=\sqrt{\lambda_{i}} U_{i} V_{i}^{\mathrm{T}}$。矩阵$\mathbf{X}_{i}$的秩为1，这样的矩阵被称作初等矩阵（elementary matrices），集合$\left(\sqrt{\lambda_{i}}, U_{i}, V_{i}\right)$被称作三特征（eigentriple）简记作ET。
 
 
 #### <span id="index2.1.1.2">2.1.1.2 第二阶段：重构</span> [目录](#mulu)
 **第三步：三特征分组**
-一旦得到[(2.2)](#eq2.2)的分解结果，就把$d$个分解结果分配到$m$个不相交的子集中$I_{1}, \ldots, I_{m}$。令$I=\left\{i_{1}, \ldots, i_{p}\right\}$。
-分组$I$对应的分组结果$\mathbf{X}_{I}=\mathbf{X}_{i_1}+...+\mathbf{X}_{i_p}$。
-最终分组后的结果记为
+一旦得到[(2.2)](#eq2.2)的分解结果，就把$d$个分解结果分配到$m$个不相交的子集中$I_{1}, \ldots, I_{m}$。令$I=\left\{i_{1}, \ldots, i_{p}\right\}$。分组$I$对应的分组结果$\mathbf{X}_{I}=\mathbf{X}_{i_1}+...+\mathbf{X}_{i_p}$。最终分组后的结果记为
 <span id="eq2.3"></span>
 $$
 \mathbf{X}=\mathbf{X}_{I_{1}}+\ldots+\mathbf{X}_{I_{m}} \tag{2.3}
@@ -64,10 +60,7 @@ $$
 
 
 **第四步：对角平均**
-在这一步，我们需要把矩阵$\mathbf{X}_{I_{j}}$还原为时间序列。
-令$\mathbf{Y}$表示$L*K$的一个矩阵，记$L^*=min(L, K), K^*=max(L,K)，N=L+K-1$。
-令$y_{i j}^{*}=y_{i j}$如果$L<K$，否则$y_{i j}^{*}=y_{j i}$。
-使用以下公式将矩阵$\mathbf{Y}$还原为时间序列：
+在这一步，我们需要把矩阵$\mathbf{X}_{I_{j}}$还原为时间序列。令$\mathbf{Y}$表示$L*K$的一个矩阵，记$L^*=min(L, K), K^*=max(L,K)，N=L+K-1$。令$y_{i j}^{*}=y_{i j}$如果$L<K$，否则$y_{i j}^{*}=y_{j i}$。使用以下公式将矩阵$\mathbf{Y}$还原为时间序列：
 <span id="eq2.4"></span>
 $$
 y_{k}= \begin{cases}\frac{1}{k} \sum_{m=1}^{k} y_{m, k-m+1}^{*} & \text { for } 1 \leq k<L^{*}, \\ \frac{1}{L^{*}} \sum_{m=1}^{L^{*}} y_{m, k-m+1}^{*} & \text { for } L^{*} \leq k \leq K^{*}, \\ \frac{1}{N-k+1} \sum_{m=k-K^{*}+1}^{N-K^{*}+1} y_{m, k-m+1}^{*} & \text { for } K^{*}<k \leq N .\end{cases}
@@ -86,3 +79,33 @@ $$
 
 
 ### <span id="index2.1.2">2.1.2 对SSA基础算法中四个步骤的分析 [目录](#mulu)
+SSA基础算法中的步骤需要一些说明。 在这个部分我们简要讨论所涉及的程序的含义。
+
+#### <span id="index2.1.2.1">2.1.2.1 嵌入 [目录](#mulu)</span>
+嵌入是一个把一维时间序列$\mathbb{X}=\left(x_{1}, \ldots,x_{N}\right)$使用向量$X_{i}=\left(x_{i}, \ldots, x_{i+L-1}\right)$转换为多维序列$X_{1}, \ldots, X_{K}$的过程，其中$K=N-L+1$。嵌入的参数是窗口长度$L$。注意轨迹矩阵[(2.1)](#eq2.1)具有明显的对称性。$\mathbb{X}^T$相当于是窗口长度为K的多维序列。
+
+对于动力系统专家来说，一种常用的技术是获得所有成对的滞后向量$\mathbf{X}_i$和$\mathbf{X}_j$之间的经验，然后计算时间序列相关的维度。该维数与产生时间序列的动力系统的吸引子的分形维数有关。需要注意的是，在这种方法中，$L$必须相当小而$K$相当大。同样，在具有汉克尔矩阵结构的结构总最小二乘（Structural Total Least Squares）中，通常的做法是选择$L = r + 1$，其中$r$是近似矩阵的猜测秩。
+
+在SSA中，窗口长度$L$应该足够大。特别是，$L$必须足够大，以便每个$L$滞后向量包含初始序列$\mathbb{X}=\left(x_{1}, \ldots,x_{N}\right)$的一个基础部分。$L$必须足够大时，才有可能将每个$L$滞后向量$\mathbf{X}_i$视为一个单独的序列。
+
+
+#### <span id="index2.1.2.2">2.1.2.2 SVD分解 [目录](#mulu)</span>
+SVD分解可以使用不同的术语被描述，并且可以被用于不同的目的。让我们从SVD一般的特点开始讲解，这些特点对于理解SSA十分重要。
+
+正如我们已经提到过的，SVD分解可以对任意的维度为$L*K$的矩阵$\mathbf{X}=\left[X_{1}: \ldots . X_{K}\right]$进行分解，分解形式如下：
+<span id="eq2.6"></span>
+$$
+\mathbf{X}=\sum_{i=1}^{d} \sqrt{\lambda_{i}} U_{i} V_{i}^{\mathrm{T}} \tag{2.6}
+$$
+其中$\lambda_i(i=1,...,L)$是矩阵$\mathbf{S}=\mathbf{X X}^{\mathrm{T}}$的特征值，并且按照递减的顺序进行排列。$d=max\{i, such that \lambda_i>0\}=rank(\mathbf{X})$，$\left\{U_{1}, \ldots, U_{d}\right\}$是$\mathbf{S}$的政教特征向量，并且$V_{i}=\mathbf{X}^{\mathrm{T}} U_{i} / \sqrt{\lambda_{i}}$。
+
+标准的SVD术语称$\sqrt{\lambda_{i}}$为奇异值；$U_{i}$和$V_{i}$为矩阵$\mathbf{X}$的左奇异向量和右奇异向量。如果我们定义$\mathbf{X}_i=\sqrt{\lambda_{i}} U_{i} V_{i}^{\mathrm{T}}$，那么公式[(2.6)](#eq2.6)可以被写作公式[(2.2)](#eq2.2)的形式。
+
+如果所有特征向量的重数为1，那么展开式[(2.2)](#eq2.2)是唯一确定的。否则，如果至少有一个特征值的重数大于1，那么在选择相应的特征向量时就有了自由度。我们应该假设以某种方式选择特征向量并且选择是固定的。
+
+公式[(2.6)](#eq2.6)说明SVD分解具有以下的对称性：$V_{1}, \ldots, V_{d}$构成了矩阵$\mathbf{X}^{\mathrm{T}} \mathbf{X}$的特征正交系统。注意到轨迹矩阵的行和列都是原时间序列的子序列，因此左右奇异向量都具有时间结构，所以这些奇异向量也可以看做时间序列。
+
+
+
+
+
