--- a/时间序列的奇异谱分析.md
+++ b/时间序列的奇异谱分析.md
@@ -3,12 +3,12 @@
 >>[2.1 基础算法](#index2.1)
 >>>[2.1.1 算法描述](#index2.1.1)
 >>>>[2.1.1.1 第一阶段：分解](#index2.1.1.1)
->>>>
 >>>>[2.1.1.2 第二阶段：重构](#index2.1.1.2)
 >>>
 >>>[2.1.2 对SSA基础算法中四个步骤的分析](#index2.1.2)
 >>>>[2.1.2.1 嵌入](#index2.1.2.1)
 >>>>[2.1.2.2 SVD分解](#index2.1.2.2)
+>>>>[2.1.2.3 分组](#index2.1.2.3)
 
 
 
@@ -105,7 +105,34 @@ $$
 
 公式[(2.6)](#eq2.6)说明SVD分解具有以下的对称性：$V_{1}, \ldots, V_{d}$构成了矩阵$\mathbf{X}^{\mathrm{T}} \mathbf{X}$的特征正交系统。注意到轨迹矩阵的行和列都是原时间序列的子序列，因此左右奇异向量都具有时间结构，所以这些奇异向量也可以看做时间序列。
 
+SVD分解具有很多特征，其中一个如下：在所有秩$r<d$的矩阵$\mathbf{X}^{(r)}$中，矩阵$\sum_{i=1}^{r} \mathbf{X}_{i}$给出了对轨迹矩阵$\mathbf{X}$的最优估计，即$\left\|\mathbf{X}-\mathbf{X}^{(r)}\right\|_{\mathrm{F}}$最小。其中$F$表示矩阵的Frobenius范数，一个矩阵$\mathbf{Y}$的Frobenius范数为$\|\mathbf{Y}\|_{F}=\sqrt{\langle\mathbf{Y}, \mathbf{Y}\rangle_{F}}$。其中两个矩阵$\mathbf{Y}=\left\{y_{i j}\right\}_{i, j=1}^{q, s}$和$\mathbf{Z}=\left\{z_{i j}\right\}_{i, j=1}^{q, s}$的内积定义为：
+$$
+\langle\mathbf{Y}, \mathbf{Z}\rangle_{\mathrm{F}}=\sum_{i, j=1}^{q, s} y_{i j} z_{i j}
+$$
+对于向量而言，Frobenius范数等同于传统的欧几里得范数。
 
+注意到$\|\mathbf{X}\|_{\mathrm{F}}^{2}=\sum_{i=1}^{d} \lambda_{i}$并且$\lambda_{i}=\left\|\mathbf{X}_{i}\right\|_{\mathrm{F}}^{2}$，因此我们考虑将$\lambda_{i} /\|\mathbf{X}\|_{\mathrm{F}}^{2}$作为度量矩阵$\mathbf{X}_{i}$在整个轨迹矩阵$\mathbf{X}$中所占的比重。最终可以使用$\sum_{i=1}^{r} \lambda_{i} /\|\mathbf{X}\|_{\mathrm{F}}^{2}$作为轨迹矩阵的最优近似的特征指标。而且，如果$\lambda_{r} \neq \lambda_{r+1}$，可以把$\sum_{i=r+1}^{d} \lambda_{i}$作为轨迹矩阵与其最优估计之间的误差距离。
+
+现在我们考虑把轨迹矩阵$\mathbf{X}$看做是一系列L延时的向量。用$\mathcal{X}^{(L)} \subset \mathrm{R}^{L}$表示向量$X_{1}, \ldots, X_{K}$组成的线性空间。我们把这个空间称作时间序列$\mathbb{X}$的L-轨迹空间。为了强调序列$\mathbb{X}$的作用，我们把这个空间记作$\mathcal{X}^{(L)}(\mathbb{X})$。公式[(2.6)](#eq2.6)表明$\mathscr{U}=\left(U_{1}, \ldots, U_{d}\right)$是这个轨迹空间的一组正交基向量。
+
+令$Z_{i}=\sqrt{\lambda_{i}} V_{i}, i=1, \ldots, d$，公式[(2.6)](#eq2.6)可以被写作$\mathbf{X}=\sum_{i=1}^{d} U_{i} Z_{i}^{\mathrm{T}}$，并且对于延时向量$X_j$我们有$X_{j}=\sum_{i=1}^{d} z_{j i} U_{i}$，其中$z_{ji}$是向量$Z_i$中的元素。这意味着向量$Z_i$是由向量$X_{j}$在基向量$\mathscr{U}$下的第$i$个成分组成的。
+
+让我们考虑转置的轨迹矩阵$\mathbf{X}^T$。引入$Y_{i}=\sqrt{\lambda_{i}} U_{i}$，我们可以得到展开式$\mathbf{X}^{\mathrm{T}}=\sum_{i=1}^{d} V_{i} Y_{i}^{\mathrm{T}}$，该公式对应着K-延时向量在正交基$V_{1}, \ldots, V_{d}$下的表示。至此，SVD分解引出了关于轨迹矩阵$\mathbf{X}$的两种几何描述。
+
+上述关于SVD特性的描述可以用L延时向量的多变量几何语言进行描述，如下：令$r<d$，那么在整个$r$维子空间$\mathcal{L}_{r}$中，由$U_{1}, \ldots, U_{r}$张成的子空间可以最好得估计原空间。也就是说，最小化$\sum_{i=1}^{K} \operatorname{dist}^{2}\left(X_{i}, \mathcal{L}_{r}\right)$得到结果是$\mathcal{L}_{r}=\operatorname{span}\left(U_{1}, \ldots, U_{r}\right)$，而$\sum_{i=1}^{r} \lambda_{i} / \sum_{i=1}^{d} \lambda_{i}$是这些延时向量的$r$维最佳估计的特征。
+
+SVD的另一个特征与特征向量$U_{1}, \ldots, U_{d}$有关。具体地，第一个特征向量$U_1$决定了延时向量的投影变化最大的方向。后续的每一个特征向量都与之前的特征向量正交，并且延时向量在该方向上的投影变化也是最大的。因此，很自然地将第$i$个特征向量所表示的方向称作第$i$个主方向。注意到，矩阵$\mathbf{X}_{i}=U_{i} Z_{i}^{\mathrm{T}}$是延时向量在第$i$个主方向投影后构成的。
+
+这种对于SVD分解的理解角度引出了以下的术语。我们称向量$U_i$为第$i$个主特征向量，向量$V_i$和$Z_{i}=\sqrt{\lambda_{i}} V_{i}$被称作第$i$个音字向量和第$i$个主成分。
+
+**Remark2.2**：SSA基础算法中所使用的SVD分解类似于经典的多变量分析中的主成分分析（PCA）和平稳时间序列分析中的KL变换。然而，SSA中的SVD方法利用了轨迹矩阵具有汉克尔结构的特点。事实上，轨迹矩阵的行和列都是原始序列的子序列并具有相同的时域意义，而PCA和KL变换并非如此。
+
+**Remark 2.3**：一般地，轨迹空间中的任何一组正交基$P_{1}, \ldots, P_{d}$都可以替代通过SVD分解得到的正交基$U_{1}, \ldots, U_{d}$。在这种情况下，公式[(2.2)](#eq2.2)可以被替换为$\mathbf{X}_{i}=P_{i} Q_{i}^{\mathrm{T}}$，其中$Q_{i}=\mathbf{X}^{\mathrm{T}} P_{i}$。一种可以替换正交基的例子是，在拓普利兹SSA中的自相关矩阵中的正交基，见章节2.5.3。另一个例子可以在独立成分分析（ICA）和因子分析中看到，见章节2.5.4。
+
+关于SVD进一步的讨论以及使用见章节2.5.7。
+
+
+#### <span id=index2.1.2.3>2.1.2.3 分组</span> [目录](#mulu)
 
 
 
