--- a/时间序列的奇异谱分析.md
+++ b/时间序列的奇异谱分析.md
@@ -14,6 +14,11 @@
 >>[2.2 SSA的潜力](#index2.2)
 >>>[2.2.1 提取趋势分量和平滑](#index2.2.1)
 >>>>[2.2.1.1 不同解的趋势](#index2.2.1.1)
+>>>>
+>>[2.3 时间序列模型和SSA的目标](#index2.3)
+>>>[2.3.1 SSA和时间序列模型](#index2.3.1)
+>>>>[2.3.1.1 时间序列模型和周期图](#index2.3.1.1)
+
 
 ---
 # <span id="index2">第二章 SSA基础</span> [目录](#mulu)
@@ -184,3 +189,60 @@ $$
 #### <span id="index2.2.1.1">2.2.1.1 不同解的趋势</span>
 
 [https://covid19.who.int/data](#https://covid19.who.int/data)
+
+
+
+## <span id="index2.3">时间序列模型和SSA的目标</span>
+上一章节我们介绍了SSA在时间序列中提取趋势分量，周期分量，平滑，求取信号包络和去噪等方面的应用。在这一章节，我们将对这些相关的概念进行定义并进行讨论。这一章的主要任务仍然基于SSA的基础算法
+
+
+### <span id="index2.3.1">2.3.1 SSA和时间序列模型</span>
+#### <span id="index2.3.1.1">2.3.1.1 时间序列模型和周期图</span>
+理论上，SSA可以被应用于任意的时间序列。然而，实际上对于不同类型的时间序列，需要对于SSA进行不同的特殊处理。而且不同类型的时间序列对于参数的选择和待求的结果也都不同。因此本章开始回西安对不同的时间序列进行讲解，并讨论一些重要的概念。
+
+由于SSA的目标是把一个可分解的时间序列分解为一组可加的分量，因此我们假设这个时间序列是由一些简单的时间序列构成的。这些简单的时间序列就是接下来我们要讨论的内容。需要注意的是，我们只讨论确定性时间序列，其中包括噪声序列。
+
+##### (a)周期图(Periodogram)
+对于时间序列$\mathbb{X}_{N}=\left(x_{1}, \ldots, x_{N}\right)$，可以用傅里叶级数分解为：
+<span id="eq2.9"></span>
+$$
+x_{n}=c_{0}+\sum_{k=1}^{\lfloor N / 2\rfloor}\left(c_{k} \cos (2 \pi n k / N)+s_{k} \sin (2 \pi n k / N)\right)
+$$
+其中$N$表示这个序列的长度，$1 \leq n \leq N$，并当$N$为偶数的时候，$s_{N / 2}=0$。$c_0$等同于这个时间序列的平均值，因此如果该序列被中心化，则$c_0=0$。令$A_{k}^{2}=c_{k}^{2}+s_{k}^{2}$。则公式[(2.9)](#eq2.9)可以被写作：
+$$
+x_{n}=c_{0}+\sum_{k=1}^{\lfloor N / 2\rfloor} A_{k} \cos \left(2 \pi n k / N+\varphi_{k}\right) .
+$$
+我们定义周期图为：
+<span id="eq2.10"></span>
+$$
+\Pi_{x}^{N}(k / N)=\left\{\begin{array}{cl}
+c_{0}^{2} & \text { for } k=0 \\
+\left(c_{k}^{2}+s_{k}^{2}\right) / 2 & \text { for } 0<k<N / 2 \\
+c_{N / 2}^{2} & \text { for } k=N / 2
+\end{array}\right.
+$$
+公式[(2.10)](#eq2.10)的归一化如下：
+<span id="eq2.11"></span>
+$$
+\left\|\mathbb{X}_{N}\right\|_{\mathrm{F}}^{2} / N=\sum_{k=0}^{\lfloor N / 2\rfloor} \Pi_{x}^{N}(k / N)
+$$
+公式[(2.11)](#eq2.11)表明公式[(2.10)](#eq2.10)在点$k/N$的值描述了频率为$\omega=k/N$的谐波成分在整个时间序列中所占的比重。
+
+具有正功率的频率的集合被称作周期图的支撑点。如果某个周期图的支撑点属于某个区间$[a, b]$，则这个区间称为时间序列的频率范围。理论上，序列的周期图是平稳序列的频谱测量的模拟。 当这个序列渐进平稳时，对应的周期图也越接近真是的频谱。周期图对于描述一个任意的时间序列非常有用。例如，趋势分量可以被认为是一个平稳时间序列的低频子序列。
+
+周期图分析的缺点在于它的分辨率很低。事实上，周期图不能分辨出频率间隔小于$1/N$的频率成分。对于较短的序列，例如$\{j / N, j=0, \ldots,\lfloor N / 2\rfloor\}$，其很难估计整个频率范围$[0,1 / 2]$, 并且周期图难以揭示时间序列的所有成分的周期性结构。
+
+##### (b)平稳时间序列
+如果对于所有的非负整数$k$，一个无限的时间序列$\mathbb{X}_{\infty}=\left(x_{1}, x_{2}, \ldots, x_{N}, \ldots\right)$具备以下特征，则称该时间序列是平稳的：
+<span id="eq2.12"></span>
+$$
+\frac{1}{N} \sum_{j=1}^{N} x_{j+k} x_{j+m} \underset{N \rightarrow \infty}{\longrightarrow} R(k-m),
+$$
+其中函数$R()$被称作序列$\mathbb{X}$的协方差函数。也就是说如果一个无限时间序列的自相关函数只与时间间隔有关，那么该时间序列就是平稳的。后边，当我们讨论平稳性时，都假定$\frac{1}{N} \sum_{j=1}^{N} x_{j+k} \rightarrow 0($ as $N \rightarrow \infty)$，即原时间序列的均值为0。
+
+协方差函数可以用频谱测量来表示，在这个过程中决定了平稳序列的一些特性。我们可以通过一个有限的时间序列$\mathbb{X}_N$来估计对应的无限序列$\mathbb{X}_{\infty}$的频谱密度。一个平稳的无限序列$\mathbb{X}_{\infty}$的频谱测量$m_x$可以被写作：
+<span id="eq2.13"></span>
+$$
+x_{n} \sim \sum_{i} a_{k} \cos \left(2 \pi \omega_{k} n\right)+\sum_{i} b_{k} \sin \left(2 \pi \omega_{k} n\right), \quad \omega_{k} \in(0,1 / 2]
+$$、
+其中，$a_{k} = a\left(\omega_{k}\right), b_{k} = b\left(\omega_{k}\right), b(1 / 2) = 0$，并且$\sum_{k}\left(a_{k}^{2}+b_{k}^{2}\right)$收敛。（注意其中$a(1/2)\neq 0$如果$\omega_k$恰好是1/2）公式[(2.13)](#eq2.13)意味着频谱测量$m_x$集中在频率点
